[package]
name = "path_tracer"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[profile.release_debug]
inherits = "release"
debug = true

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["jpeg", "jpeg_rayon", "png"]

[dependencies.mimalloc]
version = "0.1.29"
default-features = false

[dependencies.nanorand]
version = "0.7.0"
default-features = false
features = ["tls"]

[dependencies]
bumpalo = { version = "3.11.0", features = ["allocator_api"] }
enum_dispatch = "0.3.8"
glam = { version = "0.21.3", features = ["fast-math", "bytemuck"] }
nohash-hasher = "0.2.0"
rayon = "1.5.3"
num_cpus = "1.13.1"

winit = "0.27.3"
env_logger = "0.9.1"
log = "0.4.17"
wgpu = "0.13.1"
pollster = "0.2.5"
bytemuck = "1.12.1"
