[package]
name = "path_tracer"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[profile.release_debug]
inherits = "release"
debug = true

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["jpeg", "jpeg_rayon", "png"]

[dependencies.mimalloc]
version = "0.1.34"
default-features = false

[dependencies.nanorand]
version = "0.7.0"
default-features = false
features = ["tls"]

[dependencies]
bumpalo = { version = "3.12.0", features = ["allocator_api"] }
ambassador = "0.3.5"
glam = { version = "0.23.0", features = ["fast-math", "bytemuck"] }
glidesort = "0.1.2"
nohash-hasher = "0.2.0"
rayon = "1.7.0"
num_cpus = "1.15.0"
id-arena = { version = "2.2.1", features = ["rayon"] }

winit = "0.28.3"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.15.1"
pollster = "0.3.0"
bytemuck = "1.13.1"
phf = {version = "0.11.1", features = ["macros"]}
